Closed Bug 1617312 Opened 5 years ago Closed 5 years ago

Text leaves should not have description attributes

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla76
Tracking Status
firefox76 --- verified

People

(Reporter: eeejay, Assigned: morgan)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

With the given url:
data:text/html,hello

Firefox returns an AXDescription with "hello" on the text leaf. Text leaves should only have values and not labels or descriptions.

I think the is expressed in VoiceOver when it is read more than once.

No longer depends on: 1617311
Summary: Fieldsets not announced as groupings in VoiceOver → Text leaves should not have description attributes
Blocks: 1617314
No longer blocks: 1617314
Assignee: nobody → mreschenberg
Priority: P2 → P1
Status: NEW → ASSIGNED
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a245f5b087ef Ensure labelling attributes return nil for text leaves. r=eeejay
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76

I reproduced the initial issue using an old Nightly 2020-02-21, verified that on latest Firefox beta 76.0b6 lable attributes return <nil> for text.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: