Bug 1617312: Ensure labelling attributes return nil for text leaves. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D66323

--HG--
extra : moz-landing-system : lando